{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Touch",
            "id": "ed5ac7c1-642c-4381-be74-c8a8cc927fe8",
            "actions": [
                {
                    "name": "Touch",
                    "type": "PassThrough",
                    "id": "cb131a60-b442-49f3-a186-f6cb789dd94c",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "PassThrough",
                    "id": "a316928b-5100-42d3-987b-3a2f25207bbd",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "9a2cfbca-ed83-42aa-8821-eb3c13ac3796",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f3a3664a-00a6-4945-8d91-1874c80a8b00",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "MOBILE",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3368097-e978-45d7-b2a1-a65c25baae5f",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d483219-5812-4f1e-a246-8aa41976198f",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "MOBILE",
            "bindingGroup": "MOBILE",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}